# python-init

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .dockerignore  .env  README.md  pyproject.toml  requirements.txt
{{cookiecutter.directory_name}}/src/: {{cookiecutter.file_name}}.py
